# ifs-physics-common

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  bootstrap_venv.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg
src/ifs_physics_common/: components.py  config.py  f2py.py  grid.py  h5pyx.py  iox.py  numpyx.py  py.typed  stencil.py  storage.py  timing.py  typingx.py  validation.py
src/ifs_physics_common/framework/: __init__.py  components.py  config.py  grid.py  h5pyx.py  stencil.py  storage.py
src/ifs_physics_common/utils/: f2py.py  numpyx.py  output.py  timing.py  typingx.py  validation.py
