[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=65.5.0', 'wheel']

[project]
authors = [{name = 'Stefano Ubbiali', email = 'subbiali@phys.ethz.ch'}]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Atmospheric Science',
]
dependencies = [
    # note(stubbiali): specify commit hash until #1462 is available in a public release
    'gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@2cd0c91',
    'h5py',
    'numpy>=1.22',
    'pydantic<2.0',
    'sympl @ git+https://github.com/stubbiali/sympl.git@oop'
]
description = 'Infrastructure code and convenient utilities to implement IFS physical parameterizations in Python.'
keywords = [
    'framework',
    'physical parameterizations',
]
license = {file = 'LICENSE.md', content-type = 'text/markdown'}
name = 'ifs_physics_common'
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = '>=3.9'
version = '0.0'

[project.optional-dependencies]
dev = [
    'black==24.4.0',  # note(stubbiali): coherent with corresponding pre-commit hook
    'flake8',
    'ipdb',
    'ipython==8.22.0',  # note(stubbiali): required to make ipdb work
    'mypy',
    'pre-commit',
]
gpu = ['cupy']
gpu-cuda11x = ['cupy-cuda11x']
gpu-cuda12x = ['cupy-cuda12x']
gpu-rocm = ['cython<3.0', 'cupy<13.0']

[project.urls]
Source = 'https://github.com/stubbiali/ifs_physics_common.git'

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.gt_cache
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.mypy]
check_untyped_defs = true
# set to `true` once cupy and sympl support typing
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
implicit_optional = false
install_types = true
plugins = 'numpy.typing.mypy_plugin'
show_column_numbers = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ['cupy', 'h5py', 'sympl.*']
ignore_missing_imports = true

[tool.setuptools]
platforms = ['Linux', 'Mac']

[tool.setuptools.package-data]
'ifs_physics_common' = ['py.typed']

[tool.setuptools.packages]
find = {namespaces = false, where = ['src']}
