[metadata]
name = ifs_physics_common
description = Infrastructure code and convenient utilities to implement IFS physical parameterizations in Python
author = ETH Zurich
author_email = subbiali@phys.ethz.ch
project_urls =
    Source = https://github.com/stubbiali/ifs-physics-common.git
platforms = Linux, Mac
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience:: Science / Research
    License :: OSI Approved:: Apache License, Version 2.0
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.7
install_requires =
    gt4py @ git+https://github.com/GridTools/gt4py.git@main#egg=gt4py
    numpy
    pydantic
    sympl @ git+https://github.com/stubbiali/sympl.git@oop#egg=sympl

;[tool:pytest]
;testpaths = tests

;[build_sphinx]
;source-dir = docs/source
;build-dir = docs/build
;builder = html latexpdf

[options.packages.find]
where=src

[flake8]
exclude =
    .eggs
    .git
max-line-length = 100
